[package]
name = "order-stat"
version = "0.1.3"
authors = ["Huon Wilson <dbau.pp@gmail.com>"]

homepage = "https://github.com/huonw/order-stat"
repository = "https://github.com/huonw/order-stat"
documentation = "http://huonw.github.io/order-stat"
license = "MIT/Apache-2.0"
keywords = ["order-statistics", "partial-sort", "median-of-medians"]

description = """
Compute order statistics efficiently via the Floyd-Rivest algorithm
and estimate a median via the median-of-medians algorithm.
"""

[dependencies]
std = { package = "sp-std", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11-1', version = '4.0.0-dev' }
libm = { version = "0.2" }

[features]
unstable = []

[dev-dependencies]
rand = "0.3"
quickcheck = "0.2"
#quickcheck_macros = "0.2"
